MDEV-16750 JSON_SET mishandles unicode every second pair of arguments.

The charset of temporary storage (Item_func_json_insert::tmp_js)
  was not properly set.